not working reg and log but still yeah
